Add is_king
