# resources/models.py
@@ -9,4 +9,5 @@ class People(db.Model):
    id = db.Column(db.Integer, primary_key = True)
    name = db.Column(db.String(120), nullable = False, unique = True)
    is_alive = db.Column(db.Integer, nullable = False, default = 1)
+   is_king = db.Column(db.Integer, nullable = False, default = 0)
    place_id = db.Column(db.Integer, nullable = False)
