# resources/static/swagger.json
@@ -174,6 +174,10 @@
 					"type": "integer",
 					"enum": [ 1 ]
 				},
+				"is_king": {
+					"type": "integer",
+					"enum": [ 0 ]
+				},
 				"place_id": {
 					"type": "integer",
 					"enum": [ 3 ]
